--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@reduxjs/toolkit": "^2.3.0",
     "react": "18.3.1",
     "react-native": "0.76.0",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "^3.35.0"
+    "react-native-screens": "^3.35.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
